--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Project Lessons Learned</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
     </head>
     <body>
         <header id="cabecalho">
@@ -12,34 +14,30 @@
         <div>
             <img id="minha_foto" src="/rsz_foto_perfil.jpg" alt="Rosto do estudante">
         </div>
-        <div id="licoes_aprendidas">
-            <ol>
-                <li>Instalar e usar Linux</li>
-                <li>Fundamentos do Desenvolvimento Web</li>
-                <li>Utilizar o Terminal</li>
-                <li>Unix & Bash</li>
-                <li>GitHub</li>
-                <li>Como funciona a Internet</li>
-                <li>HyperText Markup Language</li>
-                <li>CSS</li>
-                <li>Soft Skills</li>
-                <li>linkedin Campeão</li>
-            </ol>
-        </div>
-        <div id="licoes_a_aprender">
-            <ul>
-                <li>JavaScript</li>
-                <li>Lógica de Programação</li>
-                <li>DOM</li>
-                <li>Eventos</li>
-                <li>Web Storage</li>
-                <li>Forms</li>
-                <li>Flexbox</li>
-                <li>Responsivo</li>
-                <li>JavaScript ES6</li>
-                <li>Testes Unitários</li>
-            </ul>
-        </div>
+        <ol id="licoes_aprendidas">
+            <li>Instalar e usar Linux</li>
+            <li>Fundamentos do Desenvolvimento Web</li>
+            <li>Utilizar o Terminal</li>
+            <li>Unix & Bash</li>
+            <li>GitHub</li>
+            <li>Como funciona a Internet</li>
+            <li>HyperText Markup Language</li>
+            <li>CSS</li>
+            <li>Soft Skills</li>
+            <li>linkedin Campeão</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>Lógica de Programação</li>
+            <li>DOM</li>
+            <li>Eventos</li>
+            <li>Web Storage</li>
+            <li>Forms</li>
+            <li>Flexbox</li>
+            <li>Responsivo</li>
+            <li>JavaScript ES6</li>
+            <li>Testes Unitários</li>
+        </ul>
         <article>
             <p>Trybe meu maior desafio. Ao escolher um lugar para aprender a ser Desenvolvedor Web conhecia a Trybe. Para conseguir uma vaga tive que estudar muito pôs estou trocando minha área de atuação. Os desafios são inúmeros. Instalar e configurar um novo sistema operacional no computador. Aprender a usar vários programas como slack, zoom, conteúdos totalmente novos. A jornada está sendo muito difícil mas acredito que vai ser compensadora.</p>
         </article>
