colocando article ao lado de aside0

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td>Hudson</td>
-                <td>  26</td>
+                <td id="center">26</td>
                 <td>Mnaus</td>
             </tr>
         </table>
@@ -44,7 +44,7 @@
             <li>React</li>
             <li>Node</li>
         </ul>
-        <article>
+        <article id="article">
             <p>
               Nesse pouco tempo de trybe, já percebo o quanto eu evoluir. É um 
               curso bastante desafiador, pós e necessario uma grande demanda de tempo do seu dia dia, mas para 
@@ -52,12 +52,12 @@
               para nos ajudar e motivar. A trybe está sendo uma experinecia muito boa, pretendo aproveita ao máxido.
             </p> <br>
         </article>
-         <aside>
+         <aside id="aside">
             <p>
              Em menos de um mês de curso ja sou capaz de criar um corpo de site do zero e colocar este site em um repositorio
              remoto. Estou muito feliz com meu progresso, é otimista com o fulturo.
             </p>
-        </aside>
+         </aside>
         <a href="https://go.betrybe.com/be-a-tryber?utm_medium=cpc&utm_source=google&utm_campaign=conversion_nacional_programacao&utm_content=anuncio01&gclid=CjwKCAiAnvj9BRA4EiwAuUMDf0Yx__uSRhyFf2ullTXp64HxKy8o68Nh3UFR5EVgLPURCsf8phV94xoCJXoQAvD_BwE"
             target="_blank" class="link"><h6>Faça parte deste time</h6></a>
         <footer id="rodape">rodapé</footer>
