--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
                 <li> <a href="#">O que aprendi na Trybe?</a></li>
             </ul>
         </nav>
+        <section id="modulos">
+            <table>
+                <tr>
+                    <th>Fundamentos do Desenvolvimento Web</th>
+                    <th>Desenvolvimento Front-end</th>
+                    <th>Desenvolvimento Back-end</th>
+                    <th>Ciência da Computação</th>
+                </tr>
+                <tr>
+                    <td>Estudando</td>
+                    <td>Não inciado</td>
+                    <td>Não inciado</td>
+                    <td>Não inciado</td>
+                </tr>
+            </table>
+        </section>
         <section class="aprendizado">
             <h2>Meu aprendizado na Trybe</h2>
             <div class="aprendizado_box"><!-- Aprendido -->
