Testando link externo no body

--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
         </tbody>
     </table>
 
+    <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
+
     <footer id="rodape">
         <h3>Contato</h3>
         <ul>
+            <link>
             <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
             <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
             <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
