Corrigido lista de lições que ainda deseja aprender

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h3>Lições que ainda vou aprender</h3>
                 <ul id="licoes_a_aprender">
                     <li>Lógica de Programação</li>
-                    <li>JavaScript
+                    <li>JavaScript</li>
                     <li>DOM</li>
                     <li>Eventos</li>
                     <li>Web Storage</li>
@@ -64,7 +64,6 @@
                     <li>Higher Order Functions</li>
                     <li>JavaScript Assíncrono</li>
                     <li>Promises</li>
-                    <li>HTML/CSS
                 </ul>
             </div>
         </section>
