--- a/index.html
+++ b/index.html
@@ -15,35 +15,31 @@
     <section id="listas">
         <table class="borders-tables">
             <ol id="licoes_aprendidas">
-                <tr>
-                    <td>
-                        <li>*********1</li>
-                        <li>*********2</li>
-                        <li>*********3</li>
-                        <li>*********4</li>
-                        <li>*********5</li>
-                        <li>*********6</li>
-                        <li>*********7</li>
-                        <li>*********8</li>
-                        <li>*********9</li>
-                        <li>*********10</li></td>
+                <tr><td><li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                    <li>10</li></td>
                 </tr>
             </ol>
         </table>
         <table class="borders-tables">
             <ul id="licoes_a_aprender">
-                <tr>
-                    <td>
-                        <li>*dsaaaaaaaaaaaaaaaaaaa</li>
-                        <li>*sdaaaaaaaaaaadsadsa</li>
-                        <li>*dsaaaaaaaaaaaaaa</li>
-                        <li>*dsaaaaaaaaaaaaaaaa</li>
-                        <li>dsaaaaaaaaaaaaaaa*</li>
-                        <li>*dsaaaaaaaaaaaaaaaaaaaaa</li>
-                        <li>*dassssssssssssssssss</li>
-                        <li>*dasssssssssssssssssssssss</li>
-                        <li>*dsaaaaaaaaaaaaaaaaaaaaaaa</li>
-                        <li>*dsaaaaaaaaaaaaaaaaaa</li></td>
+                <tr><td><li>dsaaaaaaaaaaaaaaaaaaa</li>
+                    <li>sdaaaaaaaaaaadsadsa</li>
+                    <li>dsaaaaaaaaaaaaaa</li>
+                    <li>saaaaaaaaaaaaaaaa</li>
+                    <li>dsaaaaaaaaaaaaaaa*</li>
+                    <li>dsaaaaaaaaaaaaaaaaaaaaa</li>
+                    <li>dassssssssssssssssss</li>
+                    <li>dasssssssssssssssssssssss</li>
+                    <li>dsaaaaaaaaaaaaaaaaaaaaaaa</li>
+                    <li>dsaaaaaaaaaaaaaaaaaa</li></td>
                 </tr>
             </ul>
         </table>
