--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             </ul>
         </section>
     </aside>
+    <aside id="textos"></aside>
     <article class="lado-esquerdo">
-        <aside id="textos">
 
-            <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a
-                muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis
-                agora simples. </p>
+        <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a muita
+            informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis agora
+            simples. </p>
 
     </article>
     <section class="lado-direito">
@@ -80,6 +80,26 @@
             de todos os colaboradores nos faz sentir realmente parte do time. </p>
     </section>
     </aside>
+    <table>
+        <tr>
+            <th id="trybeTabela">Trybe</th>
+            <th>Aulas 100% Online</th>
+            <th>Aulas on-site</th>
+            <th>Profissionais qualificados</th>
+            <th>Varias formas de pagamento</th>
+            <th>Profissionais 100% dedicados</th>
+            <th>Currículo sempre Atual</th>
+        </tr>
+        <tr>
+            <td>Ensino de qualidade</td>
+            <td>Parceria com as melhores empresas do Brasil</td>
+            <td>Preparação para Processos Seletivos</td>
+            <td>Capacitacao emocional e psicológica</td>
+            <td> Acessoria no mercado de trabalho</td>
+            <td>Pagamento após conseguir trabalho</td>
+            <td>Acompanhamento pós contratação </td>
+        </tr><br> <br>
+    </table>
 
     <footer id="rodape">
         <h4>
