Reestruturaçao da pagina

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
     </section>
     <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
     <aside>
-      <section class="lists">
-        <h3 id="metodologia" class="subtitle"> Metodologia de Aprendizado </h3>
-        <p class="lado-direito">
-          No início, eu procurei assistir os conteúdos das aulas nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a seguinte postura: Estudar os conteúdos do dia seguinte já na noite do dia anterior, praticar os exercícios do dia já pela parte da manhã.
-        </p>
-      </section>
-    </aside>
-    <!-------------------------------------------------------------------------->
-    <aside>
       <article class="lists">
         <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
         <p class="lado-esquerdo">
           Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
         </p>
       </article>
+    </aside>
+    <!-------------------------------------------------------------------------->
+    <aside>
+      <section class="lists secao">
+        <h3 id="metodologia" class="subtitle"> Metodologia de Aprendizado </h3>
+        <p class="lado-direito">
+          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a seguinte postura: Estudar os conteúdos do dia seguinte já na noite do dia anterior e praticar os exercícios do dia já pela parte da manhã.
+        </p>
+      </section>
     </aside>
     <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
     <section>
