Ateracao no style5

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     </article>
     <section class="lado-direito">
-        <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade e o interesse
-            de todos os colaboradores nos faz sentir realmente parte do time. </p>
+        <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos os
+            colaboradores nos faz sentir realmente parte do time. </p>
     </section>
     </aside>
     <table>
