--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </ul>
         </section>
     </aside>
-    <aside id="textos"></aside>
+
     <article class="lado-esquerdo">
 
         <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a muita
@@ -75,10 +75,11 @@
             simples. </p>
 
     </article>
-    <section class="lado-direito">
-        <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos os
-            colaboradores nos faz sentir realmente parte do time. </p>
-    </section>
+    <aside class="lado-direito">
+        <section class="lado-direito">
+            <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos
+                os colaboradores nos faz sentir realmente parte do time. </p>
+        </section>
     </aside>
     <table>
         <tr>
