Nao lembro o que modifiquei

--- a/index.html
+++ b/index.html
@@ -34,40 +34,41 @@
                 </tr>
             </table>
         </section>
-        <section class="aprendizado">
+        <section>
             <h2>Meu aprendizado na Trybe</h2>
-            <div class="aprendizado_box"><!-- Aprendido -->
-                <h3>O que já aprendi</h3>
-                <ol id="licoes_aprendidas">
-                    <li>Unix</li>
-                    <li>Bash</li>
-                    <li>Shell Script</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>HTML</li>
-                    <li>HTML Semantico</li>
-                    <li>CSS</li>
-                    <li>Slack</li>
-                    <li>Zoom</li>
-                </ol>
-            </div>
-            <div class="aprendizado_box"><!-- Ainda não aprendido -->
-                <h3>Lições que ainda vou aprender</h3>
-                <ul id="licoes_a_aprender">
-                    <li>Lógica de Programação</li>
-                    <li>JavaScript</li>
-                    <li>DOM</li>
-                    <li>Eventos</li>
-                    <li>Web Storage</li>
-                    <li>JavaScript ES6</li>
-                    <li>Testes Unitários</li>
-                    <li>Higher Order Functions</li>
-                    <li>JavaScript Assíncrono</li>
-                    <li>Promises</li>
-                </ul>
+            <div class="aprendizado">
+                <div class="aprendizado_box"><!-- Aprendido -->
+                    <h3>O que já aprendi</h3>
+                    <ol id="licoes_aprendidas">
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Shell Script</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>HTML</li>
+                        <li>HTML Semantico</li>
+                        <li>CSS</li>
+                        <li>Slack</li>
+                        <li>Zoom</li>
+                    </ol>
+                </div>
+                <div class="aprendizado_box"><!-- Ainda não aprendido -->
+                    <h3>Lições que ainda vou aprender</h3>
+                    <ul id="licoes_a_aprender">
+                        <li>Lógica de Programação</li>
+                        <li>JavaScript</li>
+                        <li>DOM</li>
+                        <li>Eventos</li>
+                        <li>Web Storage</li>
+                        <li>JavaScript ES6</li>
+                        <li>Testes Unitários</li>
+                        <li>Higher Order Functions</li>
+                        <li>JavaScript Assíncrono</li>
+                        <li>Promises</li>
+                    </ul>
+                </div>
             </div>
         </section>
-        <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
         <article>
             <h2>O que aprendi na Trybe?</h2>
             <p>Apesar de pouco tempo estudando na Trybe, já aprendi e relembrei bastantes assuntos.
@@ -78,10 +79,12 @@
             </p>
         </article>
         <aside>
+            <h2>Passagem sobre aprendizado</h2>
             <p>Estou concluindo o meu primeiro mês de estudo na Trybe, já estudei: Unix, Bash, Sheel Script, Git, Git Hub, Internet, HTML, CSS e HTML semático.</p>
         </aside>
         <footer id="rodape">
             <p>Desenvolvido por: Maximilian Kaden</p>
+            <a href="https://www.linkedin.com/in/maximilian-kaden-a48bb0a1/" target="_blank">Clique aqui para saber mais</a>
         </footer>
     </body>
 </html>
