--- a/index.html
+++ b/index.html
@@ -64,9 +64,28 @@
       </div>
       <aside>
         <h2 class="title-name">Natália Negreiros</h2>
-        <p>Esse é o primeiro projeto do módulo de <strong>Fundamentos</strong> do desenvolvimento web.</p>
+        <p>Esse é o primeiro projeto do módulo de <strong>Fundamentos</strong> de desenvolvimento web.</p>
         <p>Todo o conhecimento adquirido durante as três primeiras semanas foram essenciais para a finalização do projeto.</p>
-      </aside>
+      </aside>  
+      <h2 id="title-table">Avaliação do projeto</h2>    
+      <table>
+        <tr>
+          <td>Desempenho</td>
+          <td align="center">Suficiente</td>
+        </tr>
+        <tr>
+          <td>Critério de Avaliação</td>
+          <td align="center">Padrão</td>
+        </tr>
+        <tr>
+          <td>Requisito obrigatórios</td>
+          <td align="center">100%</td>
+        </tr>
+        <tr>
+          <td>Requisitos opcionais</td>
+          <td align="center">100%</td>
+        </tr>
+      </table>
       <footer id="rodape">
         <a href="https://github.com/negres" target="_blank">Github</a>
         <a href="https://linkedin.com/in/natalianegres" target="_blank">Linkedin</a>
