--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section>
             <h2 class="licoes">Lições</h2>
-            <article id="licoes_aprendidas">
+            <div id="licoes_aprendidas">
                 <h3 id="titulo-aprendidas">Aprendidas</h3>
                 <ol>
                     <li>XXXXXXXXXX</li>
@@ -37,7 +37,7 @@
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                 </ol>
-            </article>
+            </div>
             <article id="licoes_a_aprender">
                 <h3 id="titulo-aprender">A aprender</h3>
                 <ul>
