Alteracao das listas

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <section>
             <h2 class="licoes">Lições</h2>
-            <div id="licoes_aprendidas">
-                <h3 id="titulo-aprendidas">Aprendidas</h3>
-                <ol>
+            <article class="licoes_aprendidas">
+                <h3 class="titulo-aprendidas">Aprendidas</h3>
+                <ol id="licoes_aprendidas">
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
@@ -37,10 +37,10 @@
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                 </ol>
-            </div>
-            <article id="licoes_a_aprender">
+            </article>
+            <article class="licoes_a_aprender">
                 <h3 id="titulo-aprender">A aprender</h3>
-                <ul>
+                <ul id="licoes_a_aprender">
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
