Alteracao das listas001

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section>
             <h2 class="licoes">Lições</h2>
-            <article class="licoes_aprendidas">
+            <div class="licoes_aprendidas">
                 <h3 class="titulo-aprendidas">Aprendidas</h3>
                 <ol id="licoes_aprendidas">
                     <li>XXXXXXXXXX</li>
@@ -37,8 +37,8 @@
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                 </ol>
-            </article>
-            <article class="licoes_a_aprender">
+            </div>
+            <div class="licoes_a_aprender">
                 <h3 id="titulo-aprender">A aprender</h3>
                 <ul id="licoes_a_aprender">
                     <li>XXXXXXXXXX</li>
@@ -52,7 +52,7 @@
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
                 </ul>
-            </article>
+            </div>
             <article class="artigo">
                 <h2>Sobre o aprendizado na Trybe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
