Inclusao link externo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          </aside>
     </main>
     <footer id="rodape">
-        <a href="">Linkedin</a>
+        <a href="https://www.linkedin.com/in/edison-pires-8bb248b0/" target="_blank">Linkedin</a>
         <p>Desenvolvido por Edison Pires</p>
     </footer>
     
