Corrigido a palavra errada(aside)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ut tortor scelerisque, facilisis nibh in, ornare enim. Morbi suscipit orci non mattis feugiat. Pellentesque eget orci gravida laoreet.
             </p>
-        </side>
+        </aside>
     </section>
     <div id="div_table">
         <table id="table" border="1">
