--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
                </article>
          </section>
          <aside class="passagem">
-            <h3>Passagem</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
-         </aside>
+             <section>
+                <h3>Passagem</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+            </section>
+        </aside>
     </main>
     <footer id="rodape">
         <a href="https://www.linkedin.com/in/edison-pires-8bb248b0/" target="_blank">Linkedin</a>
