--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header id="cabeçalho">
+        <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - Trybe!</h1>
         </header>
         <nav>
