--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img id="minha_foto" src="images\edisonps.jpg" alt="Imagem do Edison" width="300px">
 
         <section>
-            <h2 class="licoes">Lições</h2>
-            <div class="licoes_aprendidas">
-                <h3 class="titulo-aprendidas">Aprendidas</h3>
+            <h2 id="licoes">Lições</h2>
+            <div id="box-aprendidas">
+                <h3 id="titulo-aprendidas">Aprendidas</h3>
                 <ol id="licoes_aprendidas">
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
@@ -38,7 +38,7 @@
                     <li>XXXXXXXXXX</li>
                 </ol>
             </div>
-            <div class="licoes_a_aprender">
+            <div id="box-aprender">
                 <h3 id="titulo-aprender">A aprender</h3>
                 <ul id="licoes_a_aprender">
                     <li>XXXXXXXXXX</li>
@@ -64,8 +64,8 @@
          <aside class="passagem">
              <section>
                 <h3>Passagem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
             </section>
         </aside>
     </main>
