--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <title>project-lessons-learned</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
