--- a/index.html
+++ b/index.html
@@ -9,5 +9,34 @@
         <header id="cabecalho">
             <h1 id="titulo">Lessons learned - Trybe</h1>
         </header>
+        <img id="minha_foto" src="41455685_1333374096792491_6867164033269104201_n.jpg" width= 300px>
+        <a href="https://www.instagram.com/nevan_go/" target="_blank">Instagram</a>
+        <ol id="licoes_aprendidas">
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+        </ol id="licoes_a_aprender">
+        <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+        </ul>
+        <article>
+            
+        </article>
+        <footer id="rodape">Rodapé</footer>
     </body>
 </html>
