Colocando fundo e borda no header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
         <nav>
             <ul>
-                <li class="nav"><a href="#minha_foto">Uma Foto Minha</a></li>
-                <li class="nav"><a href="#texto">Sobre minha jornada de aprendizado</a></li>
+                <li class="nav"><a href="#texto">Minha jornada de aprendizado</a></li>
                 <li class="nav"><a href="#licoes_aprendidas">O que eu já aprendi</a></li>
                 <li class="nav"><a href="#licoes_a_aprender">O que quero aprender</a></li>
                 <li class="nav"><a href="#rodape">Contato</a></li>
@@ -73,9 +72,9 @@
         <li>Soft Skils para esse mercado</li>
     </ul>
 
-    <table class="greenTable">
+    <table class="tabela">
         <thead>
-            <tr>
+            <tr >
                 <th colspan="2">Jornada Trybe</th>
             </tr>
         </thead>
@@ -106,7 +105,6 @@
     <footer id="rodape">
         <h3>Contato</h3>
         <ul>
-            <link>
             <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
             <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
             <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
