consertando a lista a aprender

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <li>item</li>
             <li>item</li>
             <li>item</li>
-        </ol id="licoes_a_aprender">
-        <ul>
+        </ol>
+        <ul id="licoes_a_aprender">
             <li>item</li>
             <li>item</li>
             <li>item</li>
@@ -35,7 +35,6 @@
             <li>item</li>
         </ul>
         <article>
-            
         </article>
         <footer id="rodape">Rodapé</footer>
     </body>
