--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
             <li>item</li>
             <li>item</li>
             <li>item</li>
+            <li>item</li>
         </ul>
         <article>
         </article>
+        <aside>
+
+        </aside>
         <footer id="rodape">Rodapé</footer>
     </body>
 </html>
