--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
       <aside class="lado-direito">
         <p>
           It has survived not only five centuries, but also the leap into
-          electronic typesetting, remaining essentially unchanged. It was
-          popularised in the 1960s with the release of Letraset sheets
-          containing Lorem Ipsum passages, and more recently with desktop.
+          electronic typesetting, remaining essentially unchanged
         </p>
       </aside>
     </section>
