Structuring the page3.2 - Test from characters limit

--- a/index.html
+++ b/index.html
@@ -15,44 +15,46 @@
     <section id="listas">
         <table class="borders-tables">
             <ol id="licoes_aprendidas">
-                <tr><td><li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
-                    <li>10</li></td>
-                </tr>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
             </ol>
         </table>
         <table class="borders-tables">
             <ul id="licoes_a_aprender">
-                <tr><td><li>dsaaaaaaaaaaaaaaaaaaa</li>
-                    <li>sdaaaaaaaaaaadsadsa</li>
-                    <li>dsaaaaaaaaaaaaaa</li>
-                    <li>saaaaaaaaaaaaaaaa</li>
-                    <li>dsaaaaaaaaaaaaaaa*</li>
-                    <li>dsaaaaaaaaaaaaaaaaaaaaa</li>
-                    <li>dassssssssssssssssss</li>
-                    <li>dasssssssssssssssssssssss</li>
-                    <li>dsaaaaaaaaaaaaaaaaaaaaaaa</li>
-                    <li>dsaaaaaaaaaaaaaaaaaa</li></td>
-                </tr>
+                <li>dsaaaaaaaaaaaaaaaaaaa</li>
+                <li>sdaaaaaaaaaaadsadsa</li>
+                <li>dsaaaaaaaaaaaaaa</li>
+                <li>saaaaaaaaaaaaaaaa</li>
+                <li>dsaaaaaaaaaaaaaaa</li>
+                <li>dsaaaaaaaaaaaaaaaaaaaaa</li>
+                <li>dassssssssssssssssss</li>
+                <li>dasssssssssssssssssssssss</li>
+                <li>dsaaaaaaaaaaaaaaaaaaaaaaa</li>
+                <li>dsaaaaaaaaaaaaaaaaaa</li>
             </ul>
         </table>
-
     </section>
 
     <article>
-        <a href="https://www.facebook.com/silveira.jean.9/" target="_blank">
-            Este é meu Facebook, venha me conhecer melhor.
-        </a>
+       <p>Carpe diem é parte da frase latina carpe diem quam minimum credula postero <br>(literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída <br> de  uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções <br> possíveis: "colhe o dia" (tradução literal), "desfruta o presente", "vive este <br> dia", "aproveita o dia" ou "aproveita o momento". O poeta latino exorta sua <br> brinterlocutora, Leuconoe, a desfrutar do prazer que a vida oferece, a cada <br> momento de aproveitar o que há de bom em cada instante, já que o futuro é incerto.</p>
     </article>
 
-    <aside id="A história até aqui..."></aside>
+    <a href="https://www.facebook.com/silveira.jean.9/" target="_blank">
+        Este é meu Facebook, venha me conhecer melhor.
+    </a>
+
+    <aside id="A história até aqui...">
+        <p>Denomina-se cultura punk os estilos dentro da subcultura e tribo urbana <br> 
+        que possuem certas características comuns àquelas ditas punk, como por exemplo <br> o princípio de autonomia do faça-você-mesmo, o interesse pela aparência <br> agressiva,a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
+    </aside>
 
     <nav>
         <ul>
