--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 
       <aside class="lado-direito">
         <p>
-          It has survived not only five centuries, but also the leap into
-          electronic typesetting, remaining essentially unchanged
+          It has survived not only five centuries, but also the leap into electronic typesetting.
         </p>
       </aside>
     </section>
