Atualizando as posições dos elementos

--- a/index.html
+++ b/index.html
@@ -12,38 +12,77 @@
     <header id="cabecalho">
         <section>
             <h1 id="titulo">2 SEMANAS DE TRYBE</h1>
-            <h2>Tudo que aprendi até aqui!</h2>
         </section>
 
         <nav>
             <ul>
-                <li class="nav"><a href="#texto">Minha jornada de aprendizado</a></li>
-                <li class="nav"><a href="#licoes_aprendidas">O que eu já aprendi</a></li>
-                <li class="nav"><a href="#licoes_a_aprender">O que quero aprender</a></li>
-                <li class="nav"><a href="#rodape">Contato</a></li>
+                <li class="nav"><a class ="option" href="#texto"><strong> Minha jornada de aprendizado </strong></a></li>
+                <li class="nav"><a class ="option" href="#licoes_aprendidas"><strong>O que eu já aprendi</strong></a></li>
+                <li class="nav"><a class ="option" href="#licoes_a_aprender"><strong>O que quero aprender</strong></a></li>
+                <li class="nav"><a class ="option" href="#rodape"><strong>Contato</strong></a></li>
             </ul>
         </nav>
     </header>
-    <section>
+
+    <section class="foto">
         <img id="minha_foto" src="./images/MinhaFoto.jpg"
             alt="Uma foto profissional em preto e branca de Emanoel Cristhian.">
     </section>
 
-    <article id="texto">
-        Sim, sou um Tryber, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido muito com essa
-        escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás.
-        Aprendi a usar o GitHub de forma profissional; Aprendi que existe uma semântica no HTML e que isso ajuda muito
-        com os motores de buscas; Agora sei que meus sites devem alcançar todas as pessoas possíveis. Enfim, ainda tenho
-        mais coisas para aprender, até mais!
-    </article>
+    <section class="texto">
+        <article id="texto">
+            Sim, sou um <strong>Tryber</strong>, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido
+            muito com essa
+            escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás
+            com o meu EU hoje.
+            Aprendi a usar o <strong>GitHub de forma profissional</strong>; Aprendi que existe uma <strong>semântica
+                HTML</strong> e que isso ajuda muito
+            com os motores de buscas; Agora sei que meus sites devem <strong>alcançar todas as pessoas
+                possíveis</strong>. Enfim, ainda tenho
+            mais coisas para aprender, até mais!
+        </article>
 
-    <section>
-        <aside>
-            Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro profissional
-            desenvolvedor. Passando desde o Shell até o deploy de um site.
-        </aside>
+        <section id="texto_mini">
+            <aside>
+                <i>
+                Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro
+                profissional
+                desenvolvedor. Passando desde o Shell até o deploy de um site.
+            </i>
+            </aside>
+        </section>
+
+        <table class="tabela">
+            <thead>
+                <tr>
+                    <th colspan="2">Jornada Trybe</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="bloco_atual">Fundamentos do Desenvolvimento Web</td>
+                    <td>Desenvolvimento Front-end</td>
+                </tr>
+                <tr>
+                    <td>Desenvolvimento Back-end</td>
+                    <td>Ciência da Computação</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Soft Skills</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Carreira</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Software Engineering - The Real Life</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Agile</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
-
+    <h3>Lições Aprendidas</h3>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Shell</li>
@@ -57,8 +96,7 @@
         <li>CSS</li>
     </ol>
 
-
-
+    <h3>Lições a Aprender</h3>
     <ul id="licoes_a_aprender">
         <li>Java Script</li>
         <li>Banco de dados</li>
@@ -72,35 +110,6 @@
         <li>Soft Skils para esse mercado</li>
     </ul>
 
-    <table class="tabela">
-        <thead>
-            <tr >
-                <th colspan="2">Jornada Trybe</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Fundamentos do Desenvolvimento Web</td>
-                <td>Desenvolvimento Front-end</td>
-            </tr>
-            <tr>
-                <td>Desenvolvimento Back-end</td>
-                <td>Ciência da Computação</td>
-            </tr>
-            <tr>
-                <td colspan="2">Soft Skills</td>
-            </tr>
-            <tr>
-                <td colspan="2">Carreira</td>
-            </tr>
-            <tr>
-                <td colspan="2">Software Engineering - The Real Life</td>
-            </tr>
-            <tr>
-                <td colspan="2">Agile</td>
-            </tr>
-        </tbody>
-    </table>
 
     <footer id="rodape">
         <h3>Contato</h3>
