Atualizando as posições dos elementos

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
 
     <footer id="rodape">
-        <h3>Contato</h3>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
-            <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
-            <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
+        <h3 class="rodape_titulo">Contato</h3>
+        <ul class="rodape_list"> 
+            <li><a target="_blank" href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
+            <li><a target="_blank" href="https://github.com/EmanoelCristhian">GitHub</a></li>
+            <li>Ou me manda um e-mail:<a target="_blank" href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
             </li>
         </ul>
     </footer>
