--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
             </article>
         </section>
-        <section class="passagem">
-            <aside>
+        <section class="section-inline-block">
+            <aside class="passagem">
                 <h3>Passagem</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</p>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora eius, deleniti aliquid facilis corporis voluptate voluptatum nobis illo laborum quae sapiente dolores ipsa vero nesciunt? Laboriosam aspernatur et reprehenderit debitis.</span>
             </aside>
         </section>
     </main>
