completo até o requisito 9

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             <li>item</li>
         </ul>
         <article>
+            <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </article>
         <aside>
-
+            <p>Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes Participantes </p>
         </aside>
         <footer id="rodape">Rodapé</footer>
     </body>
