--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
     </nav>
     <img id="logoTrybe" src="trybeLogo.png" alt="Logotipo da Trybe" style="width:110px;height:110px">
 
+    <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
 
-
-    <section id="foto">
-        <img id="minha_foto" src="WhatsApp Image 2020-11-13 at 11.58.02 PM (3).jpeg" alt="Foto do Bernardo">
-    </section>
 
     <aside id="coluna">
         <section id="lista1">
@@ -67,20 +64,21 @@
             </ul>
         </section>
     </aside>
+    <aside>
+        <article class="lado-esquerdo">
 
-    <article class="lado-esquerdo">
+            <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a
+                muita informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis
+                agora simples. </p>
 
-        <p id="info">Incrível a quantidade de informação que nossa mente e capaz de aprender. Nós não temos a dimensão de nosso potencial. Muitas vezes nos sentimos acomodados e incapacitados e somente mudamos nosso paradigma quando somos expostos à pressão a muita
-            informação. Meu aprendizado tem sido assim na Trybe. As informacõs e os desafios não param de chegar fazendo com que seu dia se torne muito pequeno. A pessoa vai evoluindo em seu potencial naturalmente, tornando tarefas antes impossiveis agora
-            simples. </p>
+        </article>
 
-    </article>
-    <aside class="lado-direito">
         <section class="lado-direito">
             <p id="transicao">Houve uma transição no meu aprendizado. Sempre tive trauma em relação a decorar matéria e nunca gostei de provas. Na Trybe o aprendizado tem sido através de muita prática, tornando fácil e prazeroso o tempo de estudo. A Boa vontade de todos
                 os colaboradores nos faz sentir realmente parte do time. </p>
         </section>
     </aside>
+
     <table>
         <tr>
             <th id="trybeTabela">Trybe</th>
