--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <aside id="coluna">
-        <section id="lista1">
+        <div id="lista1">
             <h2>Lista das lições já aprendidas</h2>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
@@ -47,8 +47,8 @@
                 <li>Empatia</li>
                 <li>Inspect</li>
             </ol>
-        </section>
-        <section id="lista2">
+        </div>
+        <div id="lista2">
             <h3>Lista das lições que Desejo aprender</h3>
             <ul id="licoes_a_aprender">
                 <li>JavaScript</li>
@@ -62,7 +62,7 @@
                 <li>Node</li>
                 <li>SQL</li>
             </ul>
-        </section>
+        </div>
     </aside>
     <aside>
         <article class="lado-esquerdo">
