Inclusão da minha foto, lista com coisas que foram aprendidas.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project - Lessons Learned</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +13,36 @@
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas em 3 SEMANAS de Trybe!</h1>
   </header>
+  <img id="minha_foto" src="./122074196_376365430157542_5702176073092801170_n.jpg" alt="Imagem de Gabriel" width="300px">
+  <section id="lista1">
+    <h3>Lições aprendidas durante as primeiras semanas de curso:</h3>
+    <ol id="licoes_aprendidas">
+      <li>Uso de distribuições Linux - Especialmente o Ubuntu;</li>
+      <li>Manutenção e criação de repositórios no GitHub;</li>
+      <li>HTML - Propriedades e configurações de páginas;</li>
+      <li>CSS - Estilizando o HTML e trazendo mais beleza às paginas web;</li>
+      <li>Introdução à JavaScript - Uso de variáveis, Manipulação de arrays, lógica e algoritmos de computação;</li>
+      <li>Como melhorar e formar conexões com um perfil no LinkedIn;</li>
+      <li>Melhorando a relação com os colegas de trabalho - Uso da empatia;</li>
+      <li>Experiências com os fundadores da Trybe;</li>
+      <li>Como se preparar para entrevistas de emprego - Introdução;</li>
+      <li>Aprendendo como lidar com a metodologia ativa;</li>
+    </ol>
+  </section>
+  <section id="lista2">
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </section>
   </div>
 </body>
 </html>
